--- a/src/popup.html
+++ b/src/popup.html
@@ -10,15 +10,18 @@
 <div id="popup-content">
     <div id="feedly">
         <div id="feedly-section">
-        <img src="/images/icon.png"><a href="#" id="website"></a>
+        <img id="feedly-logo" src="/images/icon.png"><a href="#" id="website"></a>
         </div>
-        <div id="all-read-section">
-            <span id="update-feeds"><i class="icon-refresh"></i></span>
-            <i class="icon-ok"></i><span id="mark-all-read"></span>
+        <div id="popup-actions">
+            <i class="icon-share" id="open-all-news"><div class="arrow-up"></div><span></span></i>
+            <i class="icon-ok" id="mark-all-read"><div class="arrow-up"></div><span></span></i>
+            <i class="icon-refresh" id="update-feeds"><div class="arrow-up"></div><span></span></i>
         </div>
         <div class="clear"></div>
-        <button id="btn-feeds" class="tab active-tab">Feeds</button>
-        <button id="btn-feeds-saved" class="tab">Saved</button>
+        <div id="tabs-container">
+            <button id="btn-feeds" class="tab active-tab">Feeds</button>
+            <button id="btn-feeds-saved" class="tab">Saved</button>
+        </div>
     </div>
     <div id="feed"></div>
     <div id="feed-saved"></div>
