Added option to open all feeds when popup is opened.

--- a/src/popup.html
+++ b/src/popup.html
@@ -51,7 +51,7 @@
             <a data-link="{{blogUrl}}" href="javascript:void(0)">{{blog}}</a>,
             <span class="timeago" title="{{isoDate}}"></span>
         </div>
-        <div class="content"></div>
+        <div class="content">{{> content}}</div>
     </div>
     {{/feeds}}
 </script>
