--- a/src/options.html
+++ b/src/options.html
@@ -62,6 +62,9 @@
                 <span class="label" data-locale-value="ForceUpdateFeeds"></span>
                 <input type="checkbox" data-disable-parent="openSiteOnIconClick" data-option-name="forceUpdateFeeds" /><br>
 
+                <span class="label" data-locale-value="OpenFeedsInSameTab"></span>
+                <input type="checkbox" data-disable-parent="openSiteOnIconClick" data-option-name="openFeedsInSameTab" /><br>
+
                 <span class="label" data-locale-value="ExpandFeeds"></span>
                 <input type="checkbox" data-disable-parent="openSiteOnIconClick" data-option-name="expandFeeds" /><br>
 
