--- a/src/options.html
+++ b/src/options.html
@@ -41,6 +41,9 @@
                 <span class="label" data-locale-value="OpenSiteOnIconClick"></span>
                 <input type="checkbox" data-option-name="openSiteOnIconClick" /><br>
 
+                <span class="label" data-locale-value="OpenFeedsInBackground"></span>
+                <input type="checkbox" data-disable-parent="openSiteOnIconClick" data-option-name="openFeedsInBackground" /><br>
+
                 <span class="label" data-locale-value="AbilitySaveFeeds"></span>
                 <input type="checkbox" data-disable-parent="openSiteOnIconClick" data-option-name="abilitySaveFeeds" /><br>
 
@@ -52,6 +55,12 @@
 
                 <span class="label" data-locale-value="PopupFontSize"></span>
                 <input type="number" data-disable-parent="openSiteOnIconClick" min="70" max="150" data-option-name="popupFontSize" /><br>
+
+                <span class="label" data-locale-value="PopupWidth"></span>
+                <input type="number" data-disable-parent="openSiteOnIconClick" min="380" max="750" data-option-name="popupWidth" /><br>
+
+                <span class="label" data-locale-value="ExpandedPopupWidth"></span>
+                <input type="number" data-disable-parent="openSiteOnIconClick" min="380" max="750" data-option-name="expandedPopupWidth" /><br>
 
                 <span class="label" data-locale-value="ShowFullFeedContent"></span>
                 <input type="checkbox" data-disable-parent="openSiteOnIconClick" data-option-name="showFullFeedContent" /><br>
